sandc/test/fixtures/pbtRegression/shouldSucceed/typeArgs/TypeArgs.sand
pub class TypeArgs<T, U extends T> {
    foo: U;
}