sandc/test/fixtures/pbtRegression/shouldFail/unqualifiedPackageRefs/namedFromUnnamed/Unnamed.sand
pub class Unnamed extends Named {
    
}